Roundcube Webmail MarkAsJunk2
=============================

2010 08 07
==========
 * Use better command names

2010 05 20
==========
 * Username parsing now in core (r3774)

2010 03 27
==========
 * Respect display_next setting
 * Fix mark as ham in message view
 * Fix ham detachment, broken after c585116e7759c94d19fe6713af72cb5b45f7fde2,
   also see RC ticket #1486584

2010 03 20
==========
 * Update to r3393

2010 03 07
==========
 * Better toolbar icons

2010 02 23
==========
 * Update after r3261

2010 02 14
==========
 * Another update after r3258

2010 02 07
==========
 * Update after r3258

2010 01 29
==========
 * Move toolbar config to config file

2009 12 01
==========
 * CSS update after r3141

2009 11 30
==========
 * Use explode() rather than split()

2009 10 31
==========
 * Create driver based system for different learning methods

2009 10 29
==========
 * Rename plugin to markasjunk2

2009 10 29
==========
 * Use local_skin_path() (rev 3076)

2009 08 02
==========
 * Added ability to mark ham as unread
 * Added ability to flag/unflag spam/ham
 * Added ability to trigger sa-learn
 * Added config file to control new options